--- a/generasi-gigih-homework/.env
+++ b/generasi-gigih-homework/.env
@@ -1,5 +1,5 @@
 REACT_APP_CLIENT_ID=3e29976463f64da9a31678121e9316d5
 REACT_APP_CLIENT_SECRET=ded767679b714c1eb309d06142fce5f6
 REACT_APP_AUTHORIZE_URL=https://accounts.spotify.com/authorize
-REACT_APP_REDIRECT_URL=https://example.com/callback
+REACT_APP_REDIRECT_URL=https://localhost:3000
 REACT_APP_GIPHY_CODE=PVpuyY4VR1cxLoRcFsiVA9x2HtzVw6W1
