Update react spotify search

--- a/generasi-gigih-homework/.env
+++ b/generasi-gigih-homework/.env
@@ -1,5 +1,4 @@
-REACT_APP_CLIENT_ID=3e29976463f64da9a31678121e9316d5
-REACT_APP_CLIENT_SECRET=ded767679b714c1eb309d06142fce5f6
-REACT_APP_AUTHORIZE_URL=https://accounts.spotify.com/authorize
-REACT_APP_REDIRECT_URL=https://localhost:3000
 REACT_APP_GIPHY_CODE=PVpuyY4VR1cxLoRcFsiVA9x2HtzVw6W1
+REACT_APP_CLIENT_ID=886f74a87d5649a78165b070b0328a76
+REACT_APP_AUTHORIZE_URL=https://accounts.spotify.com/authorize
+REACT_APP_REDIRECT_URL=http://localhost:3000/redirect
