--- a/generasi-gigih-homework/.env
+++ b/generasi-gigih-homework/.env
@@ -2,4 +2,5 @@ REACT_APP_GIPHY_CODE=PVpuyY4VR1cxLoRcFsiVA9x2HtzVw6W1
 REACT_APP_CLIENT_ID=886f74a87d5649a78165b070b0328a76
 REACT_APP_AUTHORIZE_URL=https://accounts.spotify.com/authorize
 REACT_APP_REDIRECT_URL=http://localhost:3000/redirect
+REACT_APP_CLIENT_SECRET=64e4965763df4130a931f6490f1ca395
 REACT_APP_SCOPE=user-read-private
