--- a/generasi-gigih-homework/package.json
+++ b/generasi-gigih-homework/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "4.0.3",
     "redux": "4.0.5",
     "redux-thunk": "2.3.0",
+    "spotify-web-api-node": "^5.0.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
